apps/vote-system/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-system-http
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: http
  template:
    metadata:
      labels:
        app.kubernetes.io/component: http
    spec:
      containers:
        - name: site
          image: ghcr.io/wesleyklop/vote-system:edge
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 384Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-system-ws
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: ws
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ws
    spec:
      containers:
        - name: vote-system-wesl-io-websockets
          image: ghcr.io/wesleyklop/vote-system:edge
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 256Mi
          command: ["php", "artisan", "websockets:serve"]
          ports:
            - containerPort: 6001
              name: ws
