apps/vote-system/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-system-http
spec:
  selector:
    app.kubernetes.io/component: http
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: vote-system-ws
spec:
  selector:
    app.kubernetes.io/component: ws
  ports:
    - protocol: TCP
      name: ws
      port: 6001
      targetPort: ws
