apps/vote-system/dev/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vote-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vote-system.wesl.io`)
      kind: Rule
      services:
        - name: vote-system-http
          port: http
    - match: Host(`vote-system.wesl.io`) && PathPrefix(`/app`)
      kind: Rule
      services:
        - name: vote-system-ws
          port: ws
